# themer-rs

./: Cargo.toml  README.md
examples/palettes/: README.md  aquarium.json  ashes.json  aylin.json  ayu_dark.json  ayu_light.json  bearded-arc.json  blossom_light.json  carbonfox.json  catppuccin.json  chadracula-evondev.json  chadracula.json  chadtain.json  charcoal-dark.json  charcoal-light.json  chocolate.json  darcula-dark.json  dark_horizon.json  decay.json  default-dark.json  default-light.json  doomchad.json  eldritch.json  embark.json  everblush.json  everforest.json  everforest_light.json  falcon.json  flex-light.json  flexoki-light.json  flexoki.json  flouromachine.json  gatekeeper.json  github_dark.json  github_light.json  gruvbox.json  gruvbox_light.json  gruvchad.json  hiberbee.json  horizon.json  (+58 more)
examples/templates/: README.md
examples/templates/alacritty/: README.md  alacritty.toml
examples/templates/btop/: README.md  btop.theme
examples/templates/fish/: README.md  fish.fish
examples/templates/foot/: README.md  foot.ini
examples/templates/gowall/: README.md  gowall.yml
examples/templates/gtk/: README.md  gtk.css
examples/templates/kitty/: README.md  kitty.conf
examples/templates/nvchad/: README.md  nvchad.lua
examples/templates/starship/: README.md  starship.toml
examples/templates/waybar/: README.md  (+1 more)
src/: cli.rs  lib.rs  main.rs
src/commands/: apply.rs  list.rs  list_targets.rs  mod.rs  validate.rs
src/config/: loader.rs  models.rs
src/output/: output.rs
src/palette/: loader.rs  models.rs
src/template/: engine.rs  filters.rs
(+3 files in other folders)
