[package]
name = "themer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tera = "1.20"
shellexpand = "3.1"
anyhow = "1.0"
dirs = "6.0"
colored = "3.0"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"


